qa: Add liberation sans font to new features/changes

--- a/Documentation/Testbericht/bericht.tex
+++ b/Documentation/Testbericht/bericht.tex
@@ -159,6 +159,8 @@ Im Folgenden werden die zusätzlich implementieren Funktionalitäten und Änderu
         Mehrere Beispiel-Programme, darunter ein Bekanntes mit den Regeln \texttt{father/2}, \texttt{mother/2} und \texttt{grandparent/2}, werden nun mit VIPER mitgeliefert und können über den \enquote{Datei}-Menüpunkt in den Editor geladen werden.
   \item \textbf{Tastenkombinationen für den Editor}\\
         Um die Nutzbarkeit des Editors zu verbessern, wurde er um gebräuchliche Tastaturkürzel wie Strg+O zum Öffnen und Strg+S zum Speichern einer Datei erweitert.
+  \item \textbf{Mitgelieferte Schriftart für Visualisierung}\\
+        Um ein einheitliches Aussehen der Visualisierung auf allen Betriebssystemen garantieren zu können, wird die freie Schriftart \enquote{Liberation Serif} von Red Hat im Programm mitgeliefert. Diese wird für alle Texte und Zeichen in der Visualisierung verwendet.
   \item \textbf{Zoom an der Position des Mauszeigers}\\
         Wird in der Visualisierung mittels des Mausrads der angezeigte Graph vergrößert oder verkleinert, so wird die Richtung des Zooms über die Position des Mauszeigers über dem Graphen bestimmt. Bisher wurde in der Visualisierung zentral herein- bzw. herausgezoomt. Außerdem wurde die Sensitivität beim Zoomen mit dem Mausrad verringert.
   \item \textbf{Änderung der Schriftgröße in Editor und Konsole}\\
