--- a/Documentation/Testbericht/bericht.tex
+++ b/Documentation/Testbericht/bericht.tex
@@ -91,6 +91,15 @@ Für die Verwaltung von gefundenen Fehlern und zu implementierenden Features wer
 
 \subsubsection{FindBugs}
 
+Die statische Analyse des ByteCodes mit FindBugs brachte die folgenden Ergebnisse hervor:
+
+\begin{itemize}
+  \item \textbf{Fehlende \texttt{hashCode} Methoden}\\
+        In den Klassen des Models wurde für notwendige Vergleiche die \texttt{java.lang.Object\#equals(Object)} Methode überschrieben, die \texttt{java.lang.Object\#hashCode()} Methode allerdings nicht. Diese wurde in allen betroffenen Klassen ergänzt.
+  \item \textbf{Schreiben in Klassenattribut}\\
+        Die Hauptklasse (\texttt{MainWindow}) schreibt bei Initialisierung einen Wahrheitswert in das statische Klassenattribut \texttt{debug}, abhängig davon ob VIPER im Debug-Modus gestartet wurde oder nicht. Da die Abfrage dieses Wahrheitswertes allerdings statisch, d.h. ohne Instanz der Hauptklasse, möglich sein soll, wird diese Warnung ignoriert.
+\end{itemize}
+
 \subsubsection{PMD}
 
 \subsubsection{Checkstyle}
