qa: Additions to manual
Added the finish query button to the manual, as well as a more detailed
description what the query can consist of

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -122,6 +122,8 @@ manual_manual =\
   <li>Parse your source code by clicking the corresponding button in the menu bar or the toolbar</li>\
   <li>If the source code is valid, the input field will unlock and you can enter your query.<br\>\
       Invalid source code causes the parser to print an error message to the console</li>\
+  <li>The query can be a single goal or it can consist of multiple goals, which are separated by a comma.<br\>\
+  	  It can also consist of arithmetic terms or the "cut" goal.</li>\
   <li>Confirm your query by pressing the enter key or the corresponding send button</li>\
   <li>Control the interpretation by using the respective buttons in the menu bar or the toolbar.<br\></li>\
       Valid queries automatically generate a visualisation shown in the panel to the right\
