qa: Add text and translations for the finish query functionality

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -32,7 +32,7 @@ tooltip_format = Format program
 tooltip_previousstep = Previous step
 tooltip_nextstep = Next step
 tooltip_nextsolution = Next solution
-tooltip_finishquery = Jump to the end of the current query
+tooltip_finishquery = Finish Query
 tooltip_cancel = Cancel
 tooltip_zoom_in = Zoom in
 tooltip_zoom_out = Zoom out
@@ -123,7 +123,7 @@ manual_manual =\
   <li>If the source code is valid, the input field will unlock and you can enter your query.<br\>\
       Invalid source code causes the parser to print an error message to the console</li>\
   <li>The query can be a single goal or it can consist of multiple goals, which are separated by a comma.<br\>\
-  	  It can also consist of arithmetic terms or the "cut" goal.</li>\
+  	  It can also consist of arithmetic terms and the "cut" goal.</li>\
   <li>Confirm your query by pressing the enter key or the corresponding send button</li>\
   <li>Control the interpretation by using the respective buttons in the menu bar or the toolbar.<br\></li>\
       Valid queries automatically generate a visualisation shown in the panel to the right\
@@ -155,7 +155,8 @@ manual_controls =\
     <li>The next step and previous step operations both make the interpreter do a single step<\br>\
         in one direction</li>\
     <li>The next solution button makes the interpreter run until a new solution is found</li>\
-    <li>The search for a new solution can always be canceled using the respective cancel button.<\br>\
-        This causes the interpretation to finish the current step and then pause</li>\
+    <li>The finish query button makes the interpreter run until no more solutions can be found</li>\
+    <li>The search for a new solution or finishing the query can always be canceled using the<\br>\
+    	respective cancel button. This causes the interpretation to finish the current step and then pause</li>\
   </ul>\
 </html>\
