qa: Add user studies introduction

--- a/Documentation/Testbericht/bericht.tex
+++ b/Documentation/Testbericht/bericht.tex
@@ -133,11 +133,33 @@ Die folgenden, eigenen Regeln erweitern die Konfiguration speziell für VIPER:
   \item Die maximale Parameteranzahl für Methoden beträgt 10, da einige Konstruktoren in Controller-Klassen viele Referenzen auf GUI Elemente oder andere Commands brauchen.
 \end{itemize}
 
-\subsection{Nutzertests}
+\subsection{Nutzerstudien}
+
+Um VIPER von Außenstehenden testen und beurteilen zu lassen, wurden im Rahmen der Qualitätssicherungs-Phase mehrere Nutzerstudien durchgeführt.
+
+Die Teilnehmer besaßen dabei unterschiedlich viele Vorkenntnisse in Prolog. Teilnehmern ohne Vorkenntnisse wurde die Funktionsweise anhand des \texttt{simpsons.pl} Beispielprogramms, welches mit VIPER mitgeliefert wird, kurz erläutert.
+
+In den Studien lag der Fokus auf den folgenden Fragestellungen:
+
+\begin{itemize}
+  \item Wie intuitiv ist der Programm-Ablauf (Code eingeben, Parsen, Abfrage stellen, Änderungen machen, wieder Parsen, ...)?
+  \item Lässt sich die Visualisierung gut bedienen? Wie funktioniert Zoomen und Bewegen? Sind die Funktionen der verschiedenen Schritte-Schaltflächen ersichtlich?
+  \item Ist die grafische Oberfläche sinnvoll angeordnet? Findet man alle Funktionalitäten ohne lange suchen zu müssen?
+  \item Ist die Menüleiste sinnvoll strukturiert? Erschließt sich die Funktion jeder Schaltfläche in der Werkzeugleiste durch das Icon?
+  \item Genereller Eindruck vom Programm: Wie stabil läuft es, wie schnell reagiert das Programm Eingaben und Schaltflächen, wie performant sind Abfragen?
+\end{itemize}
 
 % Ergebnisse des Usability Testings (Reaktionen der Leute!)
 % Icons geändert/Buttons aufgeteilt, Zoomen, Shortcuts, Stdlib anzeigen
 % Zoom-Debatte mit Meinung von Max
+
+\subsubsection{Studie 1} % Max
+
+\subsubsection{Studie 2} % Alex
+
+\subsubsection{Studie 3} % Sebi
+
+\subsubsection{Studie 4} % Lennart
 
 \section{Gefundene Fehler}
 
